// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installing slack app shows a failure message when we fail to install the app 1`] = `
<InstallationStatus
  errors={
    Array [
      "This error message should be displayed on UI",
    ]
  }
  installingSlackApplication={false}
  successInstallationSlackApplication={false}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "red",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-166",
          "alignJustify": "MuiTypography-alignJustify-168",
          "alignLeft": "MuiTypography-alignLeft-165",
          "alignRight": "MuiTypography-alignRight-167",
          "body1": "MuiTypography-body1-162",
          "body2": "MuiTypography-body2-161",
          "button": "MuiTypography-button-164",
          "caption": "MuiTypography-caption-163",
          "colorError": "MuiTypography-colorError-176",
          "colorInherit": "MuiTypography-colorInherit-172",
          "colorPrimary": "MuiTypography-colorPrimary-173",
          "colorSecondary": "MuiTypography-colorSecondary-174",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-175",
          "display1": "MuiTypography-display1-157",
          "display2": "MuiTypography-display2-156",
          "display3": "MuiTypography-display3-155",
          "display4": "MuiTypography-display4-154",
          "gutterBottom": "MuiTypography-gutterBottom-170",
          "headline": "MuiTypography-headline-158",
          "noWrap": "MuiTypography-noWrap-169",
          "paragraph": "MuiTypography-paragraph-171",
          "root": "MuiTypography-root-153",
          "subheading": "MuiTypography-subheading-160",
          "title": "MuiTypography-title-159",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "red",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-153 MuiTypography-subheading-160"
        style={
          Object {
            "color": "red",
          }
        }
      >
        Failed to install.
        <br />
        Errors: 
        This error message should be displayed on UI
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;

exports[`installing slack app shows a success message when a user successfully installs the app 1`] = `
<InstallationStatus
  errors={Array []}
  installingSlackApplication={false}
  successInstallationSlackApplication={true}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "green",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-166",
          "alignJustify": "MuiTypography-alignJustify-168",
          "alignLeft": "MuiTypography-alignLeft-165",
          "alignRight": "MuiTypography-alignRight-167",
          "body1": "MuiTypography-body1-162",
          "body2": "MuiTypography-body2-161",
          "button": "MuiTypography-button-164",
          "caption": "MuiTypography-caption-163",
          "colorError": "MuiTypography-colorError-176",
          "colorInherit": "MuiTypography-colorInherit-172",
          "colorPrimary": "MuiTypography-colorPrimary-173",
          "colorSecondary": "MuiTypography-colorSecondary-174",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-175",
          "display1": "MuiTypography-display1-157",
          "display2": "MuiTypography-display2-156",
          "display3": "MuiTypography-display3-155",
          "display4": "MuiTypography-display4-154",
          "gutterBottom": "MuiTypography-gutterBottom-170",
          "headline": "MuiTypography-headline-158",
          "noWrap": "MuiTypography-noWrap-169",
          "paragraph": "MuiTypography-paragraph-171",
          "root": "MuiTypography-root-153",
          "subheading": "MuiTypography-subheading-160",
          "title": "MuiTypography-title-159",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "green",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-153 MuiTypography-subheading-160"
        style={
          Object {
            "color": "green",
          }
        }
      >
        Successfully installed! The Strand bot should have DM'd you with setup instructions.
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;
